--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
+    <marquee> 
+      FINAL TUGAS 4    &nbsp;&nbsp;&nbsp;
+      KELOMPOK 1
+    </marquee>
     <div class="container center" >
+  
       <h1 id="typing"></h1>
     <div class="box">
       <input class="text-input" type="text" placeholder="Masukkan lokasi...">
