--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       </div>
     <div class="container weaters">
       <img src="gambar/cloud.png" alt="" class="icon">
-      <h1 class="suhu">Suhu</h1>
-      <h2 class="kota"><b>Kota</b> </h2>
+      <h1 class="suhu"></h1>
+      <h2 class="kota"><b></b> </h2>
       <div class="detail">
         <div class="col">
           <i class="fa-solid fa-droplet fa-4x fa-flip" style="color: #fbff06;"></i>
