--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <img src="gambar/cloud.png" alt="" class="icon">
       <h1 class="suhu">Suhu</h1>
       <h2 class="kota"><b>Lokasi</b> </h2>
+      <p class="country"><b></b> </p>
       <div class="detail">
         <div class="col">
           <i class="fa-solid fa-droplet fa-4x fa-flip" style="color: #fbff06;"></i>
