--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <input class="button" type="submit" name="" id="button" value="Cari">
       </div>
       <div class="error">
-        <p>Tempat tidak ditemukan</p>
+        <p>Lokasi tidak ditemukan</p>
       </div>
     <div class="container weaters">
       <img src="gambar/cloud.png" alt="" class="icon">
