--- a/index.html
+++ b/index.html
@@ -39,19 +39,31 @@
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
+
     <marquee> 
       FINAL TUGAS 4    &nbsp;&nbsp;&nbsp;
       KELOMPOK 1
     </marquee>
     <div class="container center" >
-  
+      <div class="animasi">
+        <div class="animasi-room">
+          <div><img src="gambar//daun.png" alt=""></div>
+          <div><img src="gambar//daun.png" alt=""></div>
+          <div><img src="gambar//daun.png" alt=""></div>
+          <div><img src="gambar//daun.png" alt=""></div>
+          <div><img src="gambar//daun.png" alt=""></div>
+          <div><img src="gambar//daun.png" alt=""></div>
+          <div><img src="gambar//daun.png" alt=""></div>
+          <div><img src="gambar//daun.png" alt=""></div>
+        </div>
+      </div>
       <h1 id="typing"></h1>
     <div class="box">
       <input class="text-input" type="text" placeholder="Masukkan lokasi...">
       <input class="button" type="submit" name="" id="button" value="Cari">
       </div>
       <div class="error">
-        <p>Lokasi tidak ditemukan</p>
+        <p>Tempat tidak ditemukan</p>
       </div>
     <div class="container weaters">
       <img src="gambar/cloud.png" alt="" class="icon">
