--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Final Tugas 4</title>
+    <title>Final Projek 4</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
      <!-- Bootstrap -->
@@ -41,7 +41,7 @@
   <body>
 
     <marquee> 
-      FINAL TUGAS 4    &nbsp;&nbsp;&nbsp;
+      FINAL Projek 4    &nbsp;&nbsp;&nbsp;
       KELOMPOK 1
     </marquee>
     <div class="container center" >
