--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body>
 
     <marquee> 
-      FINAL Projek 4    &nbsp;&nbsp;&nbsp;
+      FINAL PROJEK 4    &nbsp;&nbsp;&nbsp;
       KELOMPOK 1
     </marquee>
     <div class="container center" >
